k8s/dev/openig.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openig
spec:
  replicas: 1
  # For dev, we only need a couple of revs
  revisionHistoryLimit: 2
  template:
    metadata:
      name: openig
      labels:
         name: openig
    spec:
      containers:
      - name: openig
        image: forgerock/openig-custom:template
        # Assume image is in our docker cache. Part of the CI build process
        imagePullPolicy: Never
        ports:
          - name: openig
            containerPort: 8080
        volumeMounts:
          - name: keystore
            mountPath: /var/secrets/openig
            readOnly: true
      volumes:
        - name: keystore
          secret:
            secretName: openig
